--- a/src/styles/header.module.css
+++ b/src/styles/header.module.css
@@ -12,11 +12,11 @@
 }
 
 .hamburger{
-    width: 40px;
+    width: 50px;
     height: 25px;
     position: absolute;
     right: 5vw;
-    top: 22px;
+    top: 18px;
     cursor:pointer;
     z-index:2;
 }
@@ -65,10 +65,17 @@
 }
 .hamburger span:nth-child(2){
     top:9px;
-    width: 80%;
+    width: 100%;
 }
-.hamburger span:nth-child(3){
-    top:18px;
+.hamburger p{
+    position: absolute;
+    left:0;
+    top:15px;
+    font-size: 8px;
+    letter-spacing: 2px;
+    font-weight: 800;
+    font-family: "Syne", sans-serif;
+    color: #FFF;
 }
 
 .socialMediaContainer{
