--- a/src/styles/landing.module.css
+++ b/src/styles/landing.module.css
@@ -5,7 +5,6 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
-   /*  overflow: hidden; */ 
     max-width: 100vw; 
     position:relative;
 }
@@ -53,7 +52,7 @@
     padding-top: 10vw;
 }
 .landingContent > h1{
-    font-size: 28px;
+    font-size: 18px;
     text-transform: uppercase;
     text-align: left;
     white-space: nowrap;
@@ -78,7 +77,7 @@ p .line{
     width: 100%;
     height: 2px;
     background: linear-gradient(to right, var(--secondaryDark) ,var(--secondary), #fff);
-    top: -7px;
+    top: -5px;
     position: absolute;
 }
 .landingParagraph{
@@ -138,8 +137,9 @@ p .line{
     overflow: hidden;
     cursor: pointer;
     display: flex; 
-    min-width: 280px; 
-    height: 85px!important; 
+    min-width: 250px; 
+    height: 65px!important; 
+    width: 200px!important;
     padding: 5px;
 }
 .swiperSlide:hover .eventDate{
@@ -151,15 +151,16 @@ p .line{
 }
 .eventName{
     font-weight: 500;
+    font-size: 13px;
     color: var(--black);
 }
 .eventDate{
-    font-size: 30px;
+    font-size: 25px;
     font-weight: 900;
     background: var(--secondary);
     height: 100%;
     color: #fff;
-    min-width: 80px;
+    min-width: 70px;
     text-align: center;
     display: flex;
     align-items: center;
@@ -171,7 +172,7 @@ p .line{
 .eventDate span{
     display: block;
     text-align: center;
-    font-size: 12px;
+    font-size: 10px;
 }
 .bottomDetails{
     display: flex;
@@ -180,7 +181,7 @@ p .line{
     opacity: .7;
 }
 .eventDetails{
-    padding: 8px 10px ;
+    padding: 8px;
     color: var(--black);
 }
 .eventDetail{
@@ -207,13 +208,14 @@ section{
     min-height: 100vh;
 }
 .sliderNavigation{
-    display: flex;
+    display: none;
     margin-left: 2rem;
 }
 .sliderTitle{
     display: flex;
     align-items: center;
     margin-bottom: 3rem;
+    font-size: 12px!important;
 }
 .sliderNavigation div{
     margin: 1rem;
@@ -257,6 +259,7 @@ section{
     }
     .swiperSlide{
         border-left:0;
+        height: 85px!important;
     }
     .eventName{
         font-size:14px;
@@ -272,6 +275,12 @@ section{
     .landingContent{
         width: 75vw;
     }
+    .dash{
+        top: -7px;
+    }
+    .eventDetails{
+        padding: 8px 10px ;
+    }
 }
 @media (min-width: 600px) {
     .button{
@@ -285,6 +294,13 @@ section{
     }
     .socialMediaContainer{
         display: flex;
+    }
+    .sliderNavigation{
+        display: flex;
+    }
+    .eventDate{
+        font-size: 30px;
+        min-width: 80px;
     }
   
 }
